better font sizes to avoid wrapping when branch name is too long

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -2,8 +2,8 @@
   height: 20px;
   width: 440px;
   border: 3px solid #ffffff;
-  margin: 7px;
-  padding: 50px;
+  margin: 3px;
+  padding: 30px;
   font-size: 30px;
   font-weight: bold;
   color: white;
@@ -12,8 +12,8 @@
 }
 
 .details {
-  line-height: 2;
-  font-size: 0.6em;
+  line-height: 1.7;
+  font-size: 0.4em;
 }
 
 .blue {
